03.helm-umbrella/02.apps/01.springboot/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk199-myfirst-api-server
  namespace: class-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk199-myfirst-api-server
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: '/actuator/prometheus'
        update: 66ff2881
      labels:
        app: sk199-myfirst-api-server
    spec:
      serviceAccountName: default
      containers:
      - name: myfirst-api-server
        image: amdp-registry.skala-ai.com/skala25a/sk199-myfirst-api-server:1.0.0
        imagePullPolicy: Always
