03.helm-umbrella/02.apps/01.springboot/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sk199-myfirst-api-server
  namespace: class-3
spec:
  ingressClassName: public-nginx
  rules:
  - host: sk199-ingress.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: sk199-myfirst-api-server
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - 'sk199-ingress.skala25a.project.skala-ai.com'
    secretName: sk199-ingress-project-tls-cert
